<resources>
    <string name="app_name">Doco News</string>
    <string name="read_more">read more</string>
    <string name="author">Author</string>
    <string name="author_text">Author :</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="bookmars">Bookmars</string>
    <string name="all_saved_data_cleared">All saved data cleared</string>
    <string name="detail_news">Detail News</string>
    <string name="saved_news">Saved News</string>
    <string name="desc">Desc</string>
    <string name="date">Date News</string>
    <string name="news_photo">News photo</string>
    <string name="error">error</string>
    <string name="share_button">share_button</string>
</resources>