<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_cardview"
        android:layout_marginBottom="@dimen/margin_4"
        app:cardCornerRadius="@dimen/radius_6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:maxLines="1"
                android:text="@string/title"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/img_news"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:lines="3"
                android:maxLines="3"
                android:text="@string/desc"
                app:layout_constraintEnd_toStartOf="@+id/img_news"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:text="@string/author"
                android:maxLines="1"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_news"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <TextView
                android:id="@+id/tv_publish"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:text="@string/date"
                android:maxLines="1"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_news"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_author" />

            <ImageView
                android:id="@+id/img_news"
                android:layout_width="@dimen/width_180"
                android:layout_height="@dimen/height_150"
                android:layout_margin="@dimen/margin_12"
                android:contentDescription="@string/news_photo"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>