<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.features.detail.DetailActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/detail_news"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/small_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_200"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/small_margin"
        app:cardCornerRadius="@dimen/small_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_detail">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:foregroundGravity="top"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/news_photo" />

    </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/view"
        android:layout_width="@dimen/small_margin"
        android:layout_height="@dimen/height_100"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@color/red_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:gravity="start"
        android:text="@string/title"
        android:justificationMode="inter_word"
        android:paddingHorizontal="@dimen/padding_25"
        android:textSize="@dimen/text_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginTop="@dimen/big_margin"
        app:cardCornerRadius="@dimen/radius_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_8"
                android:layout_marginStart="@dimen/zero_dp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding_6"
                android:text="@string/author_text"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_author_detail"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/zero_dp"
                android:layout_marginBottom="@dimen/small_margin"
                android:gravity="center"
                android:text="@string/author"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_12"
                android:layout_marginVertical="@dimen/margin_4"
                android:gravity="top"
                android:justificationMode="inter_word"
                android:maxLines="@integer/material_motion_duration_long_2"
                android:padding="@dimen/padding_6"
                android:paddingHorizontal="@dimen/padding_6"
                tools:text="@tools:sample/lorem" />


            <TextView
                android:id="@+id/tv_read_more_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_12"
                android:layout_marginVertical="@dimen/margin_4"
                android:gravity="start"
                android:paddingHorizontal="@dimen/padding_6"
                android:text="@string/read_more"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>